--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/coursera-test/module2-solution/css/style.css">
-<title>Responsive Layout</title>
+<title>Our Menu</title>
 </head>
 <body>
 <h1>Responsive Layout</h1>
