--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,9 +10,9 @@
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><p>Chicken</p><p>this is all chicken.</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p>Beef</p> <p>this is all beef.</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p>Pork</p><p>this is all pork.</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p><p>Chicken</p>this is all chicken.</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p><p>Beef</p> this is all beef.</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p><p>Pork</p>this is all pork.</p></div>
 </div>
 
 </body>
