--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,9 +10,9 @@
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><div><p>Chicken</p>this is all chicken.</div></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><div><p>Beef</p> this is all beef.</div></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><div><p>Pork</p>this is all pork.</div></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><div><p>Chicken</p>Chicken is the go-to-protein for quick and easy meals. Chicken can be prepared in a variety of ways from chicken soups and stews to creamy chicken recipes. Shake up your dinner routine with these healthy chicken recipes, including boneless chicken breast recipes, chicken thigh recipes and whole, bone-in chicken recipes, as well as chicken tender recipes and leftover chicken recipes.</div></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><div><p>Beef</p>In this classic Roman braise, lean cuts of veal or beef are slow-cooked in a tomato sauce enriched with red wine and perfumed by whole cloves.</div></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><div><p>Pork</p>Rinse pork chops, pat dry, and season with garlic powder and seasoning salt to taste. Place the beaten eggs in a small bowl. Dredge the pork chops lightly in flour, dip in the egg, and coat liberally with bread crumbs.</div></div>
 </div>
 
 </body>
