--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -38,7 +38,7 @@
          
           <ul class="nav navbar-nav navbar-right visible-xs">
             <li class="dropdown">
-             
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Chicken</a></li>
                 <li><a href="#">Beef</a></li>
