--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -40,9 +40,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Chicken</a></li>
-                <li><a href="#">Beef</a></li>
-                <li><a href="#">Sushi</a></li>
+                <li><a href="#" class="dropdown-toggle">Chicken</a></li>
+                <li><a href="#" class="dropdown-toggle">Beef</a></li>
+                <li><a href="#" class="dropdown-toggle">Sushi</a></li>
               </ul>
             </li>
           </ul>
