--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -23,9 +23,9 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar">Chicken</span>
+            <span class="icon-bar">Beef</span>
+            <span class="icon-bar">Sushi</span>
           </button>
           <a class="navbar-brand" href="#">Food, LLC</a>
         </div>
