--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -38,11 +38,9 @@
          
           <ul class="nav navbar-nav navbar-right visible-xs">
             <li class="dropdown">
-               <li><a href="#" class="dropdown-toggle">Chicken</a></li>
-               <li role="separator" class="divider"></li>
-               <li><a href="#" class="dropdown-toggle">Beef</a></li>
-               <li role="separator" class="divider"></li>
-               <li><a href="#" class="dropdown-toggle">Sushi</a></li>
+               <li><a href="#" class="dropdown-toggle chicken">Chicken</a></li>
+               <li><a href="#" class="dropdown-toggle Beef">Beef</a></li>
+               <li><a href="#" class="dropdown-toggle Sushi">Sushi</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
