--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -39,8 +39,8 @@
           <ul class="nav navbar-nav navbar-right visible-xs">
             <li class="dropdown">
                <li><a href="#" class="dropdown-toggle chicken">Chicken</a></li>
-               <li><a href="#" class="dropdown-toggle Beef">Beef</a></li>
-               <li><a href="#" class="dropdown-toggle Sushi">Sushi</a></li>
+               <li><a href="#" class="dropdown-toggle beef">Beef</a></li>
+               <li><a href="#" class="dropdown-toggle sushi">Sushi</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
